<resources>
    <string name="app_name">Unilife</string>
    <string name="home">Home</string>
    <string name="exam">Exam</string>
    <string name="event">Event</string>
    <string name="lecture">Lecture</string>

    <string name="menu">menu</string>
    <string name="select">select</string>
    <string name="imageAdd">imageAdd</string>
    <string name="eventtopic">eventtopic</string>
    <string name="eventhome">eventhome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Event_reminder">Event reminder</string>
    <string name="createimg">createimg</string>
    <string name="create_topic">Create event</string>
    <string name="Event_name">Event name</string>
    <string name="eventnametxt">eventnametxt</string>
    <string name="presenrtername">Presenter</string>
    <string name="venue">Venue</string>
    <string name="startime">Start time</string>
    <string name="endtime">End time</string>



    <string name="delete">Delete</string>
    <string name="datecrtpage" />
    <string name="editEventTopic">Edit event</string>
    <string name="saveupdate1">Update</string>
    <string name="EditEventtopic">Edit event</string>
    <string name="updatebtn">Update</string>
    <string name="Cleareventbtn">Clear</string>

    <string name="exams">Exams</string>
    <string name="add">add</string>
    <string name="examHedderLogo">examHedderLogo</string>
    <string name="addExamTxt">Add Exam</string>
    <string name="examName">Exam Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="note">Note</string>
    <string name="save">SAVE</string>
    <string name="type">Type</string>

    <string name="gpaCalc">GPA Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="faculty">Faculty</string>
    <string name="specialization">Specialization</string>
    <string name="batch">Batch</string>
    <string name="gpa">GPA</string>
    <string name="cgpa">CGPA</string>
    <string name="target">Target CGPA</string>
    <string name="university">University</string>

    <string-array name="university">
        <item>SLIIT</item>
    </string-array>

    <string-array name="facultyArr">
        <item>Faculty of Computing</item>
    </string-array>

    <string-array name="special">
        <item>Data Science</item>
        <item>Software Engineering</item>
        <item>Information Technology</item>
        <item>Interactive Media</item>
        <item>Computer Systems and Network Engineering</item>
        <item>Information Systems Engineering</item>
        <item>Cyber Security</item>
    </string-array>

    <string-array name="batchArr">
        <item>Y1S1</item>
        <item>Y1S2</item>
        <item>Y2S1</item>
        <item>Y2S2</item>
        <item>Y3S1</item>
        <item>Y3S2</item>
        <item>Y4S1</item>
        <item>Y4S2</item>
    </string-array>


    <string name="editExamPageHedder">Edit Exam</string>
    <string name="update">UPDATE</string>
    <string name="clear">CLEAR</string>


    <string name="lectureHedder">Add Lecture</string>

    <string name="lectureName">Lecture Name</string>
    <string name="conductedBy">Conducted By</string>
    <string name="specialNote">Special Note</string>
    <string name="examss">Exam</string>
    <string name="update"><![CDATA[Update & Save]]></string>
    <string name="edit">"Edit "</string>
    <string name="clear">Clear</string>
    <string name="editLectureTopic">Edit Lecture</string>
</resources>