<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@color/theme_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/eventhome"
            android:layout_width="122dp"
            android:layout_height="76dp"
            android:contentDescription="@string/eventhome"
            app:layout_constraintBottom_toTopOf="@+id/topicMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/eventhome" />

        <TextView
            android:id="@+id/topicMain"
            android:layout_width="161dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/event"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.628"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventhome" />

        <ImageButton
            android:id="@+id/imageMenu"
            android:layout_width="38dp"
            android:layout_height="27dp"
            android:background="@color/theme_blue"
            android:contentDescription="@string/menu"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/eventhome"
            app:layout_constraintHorizontal_bias="0.294"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.203"
            app:srcCompat="@drawable/menu"
            tools:srcCompat="@drawable/menu" />

        <ImageButton
            android:id="@+id/imageSelect"
            android:layout_width="42dp"
            android:layout_height="39dp"
            android:background="@color/theme_blue"
            android:contentDescription="@string/select"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toEndOf="@+id/topicMain"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.816"
            app:srcCompat="@drawable/select"
            tools:srcCompat="@drawable/select" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/addEventcrt"
        android:layout_width="84dp"
        android:layout_height="69dp"
        android:background="@color/theme_white"
        android:contentDescription="@string/imageAdd"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        app:layout_constraintVertical_bias="0.973"
        app:srcCompat="@drawable/plus"
        tools:srcCompat="@drawable/plus" />

</androidx.constraintlayout.widget.ConstraintLayout>