<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addExamActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_white"
    tools:context=".AddExam">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addExamHedder"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@color/theme_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="175dp"
            android:layout_height="89dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/examhedder" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/addExamTxt"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="355dp"
        android:layout_height="491dp"
        android:layout_marginTop="15dp"
        android:background="@color/theme_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExamHedder">

        <TextView
            android:id="@+id/examNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/examName"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextExamName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextExamName" />

        <TextView
            android:id="@+id/timeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <TextView
            android:id="@+id/placeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextPlace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

        <TextView
            android:id="@+id/typeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPlace" />

        <TextView
            android:id="@+id/noteTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextNote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextType" />

        <EditText
            android:id="@+id/editTextExamName"
            android:layout_width="311dp"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/txtbox"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/dateTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/examNameTxt" />

        <!--        <EditText-->
        <!--            android:id="@+id/editTextDate"-->
        <!--            android:layout_width="311dp"-->
        <!--            android:layout_height="31dp"-->
        <!--            android:background="@drawable/txtbox"-->
        <!--            android:ems="10"-->
        <!--            android:inputType="date"-->
        <!--            android:textColor="@color/black"-->
        <!--            android:layout_marginBottom="8dp"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/timeTxt"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/dateTxt" />-->

        <Button
            android:id="@+id/editTextDate"
            android:layout_width="311dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/txtbox"
            android:ems="10"
            android:inputType="date"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/timeTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTxt" /> <!-- Background -->

        />

        <Button
            android:id="@+id/editTextTime"
            android:layout_width="311dp"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/txtbox"
            android:ems="10"
            android:inputType="time"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/placeTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeTxt" />-- Background -->/>


        <EditText
            android:id="@+id/editTextPlace"
            android:layout_width="311dp"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/txtbox"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/typeTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeTxt" />

        <EditText
            android:id="@+id/editTextType"
            android:layout_width="311dp"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/txtbox"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/noteTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typeTxt" />

        <EditText
            android:id="@+id/editTextNote"
            android:layout_width="310dp"
            android:layout_height="95dp"
            android:background="@drawable/txtbox"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/btnAddExamSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteTxt" />

        <Button
            android:id="@+id/btnAddExamSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/save"
            android:textColor="@color/white"
            app:backgroundTint="@color/theme_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.887"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNote" />

        <Button
            android:id="@+id/btnClearExamSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:text="@string/clear"
            android:textColor="@color/white"
            app:backgroundTint="@color/shadow_gray"
            app:layout_constraintEnd_toStartOf="@+id/btnAddExamSave"
            app:layout_constraintTop_toBottomOf="@+id/editTextNote" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>